[tool.poetry]
name = "rarbg-scrapy"
version = "0.1.0"
description = ""
authors = ["Samat K Jain <_@skj.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.0"
selenium = "^4.9.1"
Scrapy = "^2.6.0"
pytesseract = "^0.3.8"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
